# Maths-Graphics-OpenGL-GaussianBlur

./: CMakeLists.txt  CMakeProjectMacros.h.in  README.md
OpenGLTypes/: Shader.cpp  Shader.h
ShaderPrograms/: Quad.frag  Quad.vert
Source/: Blur.cpp  Blur.h  TBlur.h  main.cpp
